done with scrollbar, edited resumedata and fixed some css

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -38,13 +38,13 @@ body {
 
 ::-webkit-scrollbar-thumb {
    border-radius: 10px;
-   background-color: rgb(255, 77, 228);
+   // background-color: rgb(255, 77, 228);
+   background-image: linear-gradient(to bottom, rgb(255, 77, 228), rgb(0, 110, 219));
 }
 
 ::-webkit-scrollbar-thumb:hover {
    border-radius: 10px;
-   background-color: rgb(0, 110, 219); 
-
+   // background-color: rgb(0, 110, 219); 
 }
 
 /* ------------------------------------------------------------------ */
